# ot-harjoitustyo

./: .gitignore  README.md
dokumentaatio/: tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/unicafe/: .coveragerc
laskarit/viikko3/: hsl.md  monopoli.md
pasianssi-app/: .coveragerc  .pylintrc  pyproject.toml  tasks.py
pasianssi-app/data/: database.sqlite  test-database.sqlite
pasianssi-app/dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
pasianssi-app/src/: build.py  config.py  index.py  initialize_database.py  ui_settings.py
pasianssi-app/src/entities/: card.py  card_group.py  deck.py  grabbed_cards.py  group_handler.py  pile.py
pasianssi-app/src/repositories/: game_repository.py
pasianssi-app/src/services/: clock.py  event_queue.py  game_loop.py  game_service.py  group_handler.py  klondike.py  klondike_service.py  renderer.py
pasianssi-app/src/tests/: card_test.py  deck_test.py  grabbed_cards_test.py  group_handler_test.py  klondike_service_test.py  pile_test.py
pasianssi-app/src/tests/entities/: card_group_test.py  card_test.py  deck_test.py  pile_test.py
pasianssi-app/src/tests/repositories/: game_repository_test.py
pasianssi-app/src/tests/services/: clock_test.py  game_loop_test.py  group_handler_test.py  klondike_test.py
pasianssi-app/src/ui/: button.py  element.py  klondike_view.py  message_view.py  start_view.py  statistics_view.py  ui.py  ui_settings.py
(+4 files in other folders)
